<resources>
    <string name="setting_default">Defaut</string>
    <string name="setting_font">Font</string>
    <string name="setting_parcourir">Parcourir</string>
    <string name="setting_color_text">Couleur du texte</string>
    <string name="setting_backColor">Couleur de fond</string>
    <string name="setting_textSize">Taille de la police</string>
    <string name="setting_style">Style</string>
    <string name="setting_bold">Gras</string>
    <string name="setting_souligner">Souligner</string>
    <string name="setting_italique">Italique</string>
    <string name="setting_syllabe">Découpage syllabique</string>
    <string name="setting_schema">Schema</string>
    <string name="setting_add">Ajouter une preference</string>
    <string name="setting_custom_pref">Preferences utilisateur</string>
    <string name="app_name">Dysphographe</string>
    <string name="menu_setting">Preference</string>
    <string name="menu_play">Lecture texte</string>
    <string name="menu_parteger">Partager</string>
    <string name="shareFile">Partager un fichier</string>
    <string name="textToken_editer">Editer texte</string>
    <string name="textToken_Save">Sauvegarder</string>
    <string name="interligne">Interlignes</string>
</resources>
