<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_play"
        android:icon="@android:drawable/ic_media_play"
        app:showAsAction="always"
        android:title="@string/menu_play" />

    <item android:id="@+id/action_pause"
        android:icon="@android:drawable/ic_media_pause"
        app:showAsAction="always"
        android:title="@string/menu_play" />

    <item android:id="@+id/action_partage"
        android:icon="@drawable/ic_action_partager"
        app:showAsAction="always"
        android:title="@string/menu_parteger" />


    <item android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="always"
        android:title="@string/menu_setting" />



</menu>