<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/item_imgVw_delete"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_delete" />

    <EditText
        android:id="@+id/item_edtTxt_schema"
        style="@style/AppTheme.Text.Large"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:inputType="text"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/setting_schema" />

    <LinearLayout
        android:id="@+id/item_layout_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/item_bttn_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/setting_bold" />

        <Button
            android:id="@+id/item_bttn_italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/setting_italique" />

        <Button
            android:id="@+id/item_bttn_underline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_souligner" />

    </LinearLayout>

    <EditText
        android:id="@+id/item_edtTxt_size"
        style="@style/AppTheme.Text.Large"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="16"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="15dp"
        android:background="#000"
        android:padding="1dp">

        <ImageView
            android:id="@+id/item_imgVw_txtColor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000"
            android:contentDescription="@string/app_name" />
    </LinearLayout>
</LinearLayout>